# Image_Editor

./: .gitignore  CMakeLists.txt
dependencies/: CMakeLists.txt
lib/: .gitinclude
src/: CMakeLists.txt  Install.cmake  Window.cpp  Window.h  main.cpp
